k8s/02-hivemind.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hivemind
  namespace: hivemind
  labels:
    app: hivemind
spec:
  ports:
    - port: 8080
      targetPort: 9292
      name: http
  selector:
    app: hivemind
...

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hivemind
  namespace: hivemind
spec:
  selector:
    matchLabels:
      app: hivemind

  serviceName: hivemind

  replicas: 1
  revisionHistoryLimit: 3

  template:
    metadata:
      labels:
        app: hivemind
    spec:
      containers:
        - name: app
          image: ghcr.io/tlwr/hivemind:@tag
          imagePullPolicy: Always

          ports:
            - containerPort: 9292

          volumeMounts:
            - name: fs
              mountPath: /opt/hivemind/fs

          livenessProbe:
            httpGet:
              path: /health
              port: 9292
            initialDelaySeconds: 3
            periodSeconds: 15

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: doks.digitalocean.com/node-pool
                    operator: In
                    values:
                      - standard-2gb

  volumeClaimTemplates:
    - metadata:
        name: fs
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivemind-tobys-cloud
  namespace: hivemind
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - weather.tobys.cloud
      secretName: hivemind-tobys-cloud-tls
  rules:
    - host: hivemind.tobys.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivemind
                port:
                  number: 8080
...
